@@ -1,0 +1,3 @@
+brew implements a templating framework for mixing text and R code for
+report generation. brew template syntax is similar to PHP, Ruby's erb
+module, Java Server Pages, and Python's psp module.
