@@ -1,0 +1,14 @@
+# $NetBSD: Makefile,v 1.1 2019/08/09 18:32:49 brook Exp $
+
+R_PKGNAME=	brew
+R_PKGVER=	1.0-6
+CATEGORIES=	textproc
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+COMMENT=	Templating framework for report generation
+LICENSE=	gnu-gpl-v2
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
